--- a/CoreMVCBlog/Views/Blog/Index.cshtml
+++ b/CoreMVCBlog/Views/Blog/Index.cshtml
@@ -22,7 +22,7 @@
                             <ul class="blog-icons my-4">
                                 <li>
                                     <a href="#">
-                                        <i class="far fa-calendar-alt"></i> @item.BlogCreateDate
+                                        <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogCreateDate).ToString("dd MMMM yyyy"));
                                     </a>
                                 </li>
                                 <li class="mx-2">
@@ -32,7 +32,7 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fas fa-eye"></i> @item.CategoryId
+                                        <i class="fas fa-eye"></i> @item.Category.CategoryName
                                     </a>
                                 </li>
 
@@ -40,8 +40,8 @@
                             <h5 class="card-title ">
                                 <a href="single.html">@item.BlogTitle</a>
                             </h5>
-                            <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt.. </p>
-                            <a href="single.html" class="btn btn-primary read-m">Devamını Oku</a>
+                            <p class="card-text mb-3">@item.BlogContent.Substring(0,item.BlogContent.Substring(0,120).LastIndexOf(" "))...</p>
+                            <a href="BlogDetails/@item.BlogId/" class="btn btn-primary read-m">Devamını Oku</a>
                         </div>
                     </div>    
                     }
